# tinyraytracer

./: dof_ui.py  tinyraytracer.cpp  ui_out_1.ppm  ui_out_2.ppm  ui_out_3.ppm  ui_out_4.ppm  ui_out_5.ppm  ui_out_6.ppm  ui_out_7.ppm  ui_out_8.ppm  ui_out_9.ppm
STEP2/native/: CMakeLists.txt
STEP2/native/src/: mesh_bvh.cpp  pinhole_tracer.cpp
STEP2/tools/: build_native.ps1
STEP_1/: dof_ui.py  tinyraytracer.cpp
UnityProject/Assets/Scripts/: RaytraceControlPanel.cs  RaytraceFreeCameraController.cs  RaytracedSphere.cs  RenderTestFrameHost.cs
UnityProject/ProjectSettings/: ProjectVersion.txt
native/include/: raytracer_api.h
native/src/: mesh_bvh.h  plugin_api.cpp
